# django-snacks

./: README.md  db.sqlite3  pyproject.toml
snacks/: tests.py  url.py
snacks_project/: settings.py  urls.py
templates/: about.html  base.html  home.html
