[tool.poetry]
name = "django-snacks"
version = "0.1.0"
description = ""
authors = ["Ashley Casimir <ashcas@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
